<resources>
    <string name="app_name">Recipe List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item</string>
    <string name="to_add_item">To Add Item</string>
    <string name="task_name">Task Name</string>
    <string name="none">None</string>
    <string name="priority">Priority</string>
    <string name="done">Done</string>
    <string name="description_add">Description</string>
    <string name="task_item_placeHolder">Task Item</string>
    <string name="no_data_image">no data image</string>
    <string name="delete_all">Delete All</string>
    <string name="home_icon">Home</string>
    <string name="setting_icon">Setting</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="archive_or_delete">Archive OR Delete</string>
    <string name="drop_down_arrow">Drop Down Arrow</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="main_screen_recipe_view">Main Screen Recipe View</string>
    <string name="recipe_image_view">Recipe Image View</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="login_image_grocery">Login Image Grocery</string>
    <string name="recipeorama_app_name">Recipeorama</string>
    <string name="recipes_and_grocery_list_in_one_place">Recipes and Grocery List in one Place</string>
    <string name="ingredients_required">Ingredients Required</string>
    <string name="to_buy">To Buy</string>

    <string-array name="priority_drop_down">
        <item>None</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>